plugins {
    id 'org.springframework.boot' version '3.5.3' apply false
    id 'io.spring.dependency-management' version '1.1.7' apply false
    id 'java'
}

allprojects {
    group = 'com.kousenit'
    version = '1.0'

    repositories {
        mavenCentral()
    }
}

subprojects {
    apply plugin: 'java'
    apply plugin: 'org.springframework.boot'
    apply plugin: 'io.spring.dependency-management'

    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(17)
        }
    }

    dependencies {
        implementation 'io.netty:netty-resolver-dns-native-macos:4.1.116.Final:osx-aarch_64'

        testImplementation 'org.springframework.boot:spring-boot-starter-test'
        testImplementation 'io.projectreactor:reactor-test'
    }

    tasks.named('test', Test) {
        useJUnitPlatform()
        jvmArgs '-XX:+IgnoreUnrecognizedVMOptions',
                '-XX:-UseClassDataSharing',
                '-XX:+EnableDynamicAgentLoading',
                '-Xshare:off'
    }
}